metal-info-set/golden/P11M40_run10/metal40_macosx26/first_errors.txt
probe.metal:64:94: error: ambiguous deduction for template arguments of 'intersection_function_handle'
extern "C" int probe_p11m_fhandle_17(void) { metal::raytracing::intersection_function_handle __h; (void)__h; return 0; }
                                                                                             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1372:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() thread : function_handle(__metal_get_null_function_handle()) {}
             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1376:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() ray_data : function_handle(__metal_get_null_function_handle()) {}
             ^
probe.metal:70:53: error: too few template arguments for class template 'visible_function_table'
extern "C" int probe_p11m_vftnull_19(void) { metal::visible_function_table<> __v; (void)__v; return 0; }
                                                    ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
probe.metal:73:94: error: ambiguous deduction for template arguments of 'intersection_function_handle'
extern "C" bool probe_p11m_fequal_20(void) { metal::raytracing::intersection_function_handle __a, __b; return __a == __b; }
                                                                                             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1372:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() thread : function_handle(__metal_get_null_function_handle()) {}
             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1376:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() ray_data : function_handle(__metal_get_null_function_handle()) {}
             ^
probe.metal:73:99: error: ambiguous deduction for template arguments of 'intersection_function_handle'
extern "C" bool probe_p11m_fequal_20(void) { metal::raytracing::intersection_function_handle __a, __b; return __a == __b; }
                                                                                                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1372:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() thread : function_handle(__metal_get_null_function_handle()) {}
             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1376:14: note: candidate function [with Tags = <>]
  METAL_FUNC intersection_function_handle() ray_data : function_handle(__metal_get_null_function_handle()) {}
             ^
probe.metal:103:54: error: too few template arguments for class template 'visible_function_table'
extern "C" uint probe_p11m_vftsize_30(void) { metal::visible_function_table<> __v; return __v.get_size(); }
                                                     ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
probe.metal:118:89: error: no matching constructor for initialization of 'metal::render_command'
extern "C" void probe_p11m_draw1_35(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.draw_indexed_primitives(metal::primitive_type::triangle, 0u, (const device uint *)nullptr, 0u); return; }
                                                                                        ^    ~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:815:23: note: candidate constructor not viable: no known conversion from 'metal::render_command' to 'metal::command_buffer' for 1st argument
  METAL_FUNC explicit render_command(command_buffer icb, uint icb_index) thread
                      ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:820:14: note: candidate constructor not viable: requires 1 argument, but 2 were provided
  METAL_FUNC render_command(const thread render_command &) thread = default;
             ^
probe.metal:121:89: error: no matching constructor for initialization of 'metal::render_command'
extern "C" void probe_p11m_draw2_36(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.draw_patches(0u, 0u, 0u, (const device uint *)nullptr, 0u, 0u, (const device float *)nullptr); return; }
                                                                                        ^    ~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:815:23: note: candidate constructor not viable: no known conversion from 'metal::render_command' to 'metal::command_buffer' for 1st argument
  METAL_FUNC explicit render_command(command_buffer icb, uint icb_index) thread
                      ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:820:14: note: candidate constructor not viable: requires 1 argument, but 2 were provided
  METAL_FUNC render_command(const thread render_command &) thread = default;
             ^
probe.metal:121:110: error: no matching member function for call to 'draw_patches'
extern "C" void probe_p11m_draw2_36(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.draw_patches(0u, 0u, 0u, (const device uint *)nullptr, 0u, 0u, (const device float *)nullptr); return; }
                                                                                                        ~~~~~^~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:963:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:976:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:989:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1002:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
probe.metal:124:89: error: no matching constructor for initialization of 'metal::render_command'
extern "C" void probe_p11m_draw3_37(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.draw_indexed_patches(0u, 0u, 0u, (const device uint *)nullptr, (const device void *)nullptr, 0u, 0u, (const device float *)nullptr); return; }
                                                                                        ^    ~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:815:23: note: candidate constructor not viable: no known conversion from 'metal::render_command' to 'metal::command_buffer' for 1st argument
  METAL_FUNC explicit render_command(command_buffer icb, uint icb_index) thread
                      ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:820:14: note: candidate constructor not viable: requires 1 argument, but 2 were provided
  METAL_FUNC render_command(const thread render_command &) thread = default;
             ^
probe.metal:124:110: error: no matching member function for call to 'draw_indexed_patches'
extern "C" void probe_p11m_draw3_37(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.draw_indexed_patches(0u, 0u, 0u, (const device uint *)nullptr, (const device void *)nullptr, 0u, 0u, (const device float *)nullptr); return; }
                                                                                                        ~~~~~^~~~~~~~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1016:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, const device void *control_point_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1029:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, const device void *control_point_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1042:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, const constant void *control_point_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1055:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const device uint *patch_index_buffer, const constant void *control_point_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1068:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, const device void *control_point_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1081:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, const device void *control_point_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1094:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, const constant void *control_point_index_buffer, uint instance_count, uint base_instance, const device T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:1107:19: note: candidate template ignored: requirement 'disjunction_v<metal::is_same<float, metal::MTLQuadTessellationFactorsHalf>, metal::is_same<float, metal::MTLTriangleTessellationFactorsHalf>>' was not satisfied [with T = float]
  METAL_FUNC void draw_indexed_patches(uint num_patch_control_points, uint patch_start, uint patch_count, const constant uint *patch_index_buffer, const constant void *control_point_index_buffer, uint instance_count, uint base_instance, const constant T *tessellation_factor_buffer, uint instance_stride = 0, float scale = 1.0f) thread
                  ^
probe.metal:127:91: error: no matching constructor for initialization of 'metal::render_command'
extern "C" void probe_p11m_winding_38(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.set_front_facing_winding(metal::winding::counter_clockwise); return; }
                                                                                          ^    ~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:815:23: note: candidate constructor not viable: no known conversion from 'metal::render_command' to 'metal::command_buffer' for 1st argument
  METAL_FUNC explicit render_command(command_buffer icb, uint icb_index) thread
                      ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:820:14: note: candidate constructor not viable: requires 1 argument, but 2 were provided
  METAL_FUNC render_command(const thread render_command &) thread = default;
             ^
probe.metal:127:153: error: no member named 'counter_clockwise' in 'metal::winding'; did you mean 'counterclockwise'?
extern "C" void probe_p11m_winding_38(metal::render_command __cb) { metal::render_command __rc(__cb, 0u); __rc.set_front_facing_winding(metal::winding::counter_clockwise); return; }
                                                                                                                                        ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
                                                                                                                                                        counterclockwise
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_graphics:244:3: note: 'counterclockwise' declared here
  counterclockwise = __METAL_WINDING_COUNTERCLOCKWISE__
  ^
probe.metal:130:126: error: no matching constructor for initialization of 'metal::render_command'
extern "C" void probe_p11m_setps_r_39(metal::render_command __cb, metal::render_pipeline_state __ps) { metal::render_command __rc(__cb, 0u); __rc.set_pipeline_state(__ps); return; }
                                                                                                                             ^    ~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:815:23: note: candidate constructor not viable: no known conversion from 'metal::render_command' to 'metal::command_buffer' for 1st argument
  METAL_FUNC explicit render_command(command_buffer icb, uint icb_index) thread
                      ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.jHw0bo/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_command_buffer:820:14: note: candidate constructor not viable: requires 1 argument, but 2 were provided
  METAL_FUNC render_command(const thread render_command &) thread = default;
             ^
probe.metal:130:147: error: no member named 'set_pipeline_state' in 'metal::render_command'
extern "C" void probe_p11m_setps_r_39(metal::render_command __cb, metal::render_pipeline_state __ps) { metal::render_command __rc(__cb, 0u); __rc.set_pipeline_state(__ps); return; }
                                                                                                                                             ~~~~ ^
probe.metal:133:147: error: no member named 'set_pipeline_state' in 'metal::compute_command'
extern "C" void probe_p11m_setps_c_40(metal::command_buffer __cb, metal::compute_pipeline_state __ps) { metal::compute_command __c(__cb, 0u); __c.set_pipeline_state(__ps); return; }
                                                                                                                                              ~~~ ^
15 errors generated.
